Fix page alignment

--- a/src/components/employeeTable/EmployeeTable.css
+++ b/src/components/employeeTable/EmployeeTable.css
@@ -3,8 +3,6 @@
     height: 100%;
     background-color: #f9fafb;
     min-width: 1100px;
-    max-width: 1300px;
-    margin: 24px !important;
 }
 
 .scrollable-x {
