--- a/src/pages/employee_list/EmployeeList.css
+++ b/src/pages/employee_list/EmployeeList.css
@@ -3,5 +3,5 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 16px 48px;
+    margin-top: 24px;
 }
